cmake_minimum_required(VERSION 3.10)
project(msq_demo VERSION 0.1)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
file(GLOB SOURCES "src/*.c")
add_executable(msq_demo ${SOURCES})
target_include_directories(msq_demo PUBLIC ${PROJECT_BINARY_DIR})
add_subdirectory(./deps/raylib)
target_link_libraries(msq_demo PRIVATE raylib)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    target_link_libraries(msq_demo PRIVATE glfw m pthread)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    target_link_libraries(msq_demo PRIVATE opengl32 gdi32)
endif()
file(COPY res/ DESTINATION ${EXECUTABLE_OUTPUT_PATH}/res)
